<resources>
    <string name="app_name">AngelsCareer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_cv">Curriculum Vitae</string>

    <string name="page_personal_info">Personal Information</string>
    <string name="page_working_exp">Working Experiences</string>

    <!--Hint-->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="street">Street with house No.</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
</resources>

