<?xml version="1.0" encoding="utf-8"?>
<angel.zxiu.career.view.AngelsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:multiple="false"
    app:path="@string/path.personal_info">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <angel.zxiu.career.view.AngelsEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:imeOptions="flagNavigateNext"
            android:maxLines="1"
            app:key="@string/key.first_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <angel.zxiu.career.view.AngelsEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:imeOptions="flagNavigateNext"
            android:maxLines="1"
            app:key="@string/key.last_name" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <angel.zxiu.career.view.DateEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday"
            android:imeOptions="flagNavigateNext"
            android:inputType="datetime"
            android:maxLines="1"
            app:key="@string/key.birthday" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <angel.zxiu.career.view.AngelsEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:imeOptions="flagNavigateNext"
            android:maxLines="1"
            app:key="@string/key.street" />
    </android.support.design.widget.TextInputLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0, 1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <angel.zxiu.career.view.AngelsEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postal_code"
                    android:imeOptions="flagNavigateNext"
                    android:inputType="number|text"
                    android:maxLines="1"
                    app:key="@string/key.postal_code" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <angel.zxiu.career.view.AngelsEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:maxLines="1"
                    app:key="@string/key.city" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>
    </TableLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <angel.zxiu.career.view.AngelsEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:imeOptions="flagNavigateNext"
            android:maxLines="1"
            app:key="@string/key.country" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <angel.zxiu.career.view.AngelsEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="flagNavigateNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:key="@string/key.email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <angel.zxiu.career.view.AngelsEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/website"
            android:imeOptions="actionDone"
            android:inputType="textWebEditText"
            android:maxLines="1"
            app:key="@string/key.website" />
    </android.support.design.widget.TextInputLayout>
</angel.zxiu.career.view.AngelsLinearLayout>
